[GTK][Win]: Fix plugin drawing to an offscreen buffer https://bugs.webkit.org/show_bug.cgi?id=89499

Patch by Kalev Lember <kalevlember@gmail.com> on 2012-06-28
Reviewed by Brent Fulgham.

Take into account that the GTK+ port draws to a backing store and adjust
the target rectangle calculation accordingly.

* plugins/win/PluginViewWin.cpp:
(WebCore::PluginView::paint):
(WebCore::PluginView::setNPWindowRect):

Canonical link: https://commits.webkit.org/108009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121441 268f45cc-cd09-0410-ab3c-d52691b4dbfc